Do not call DocumentFactory::load() from multiple threads.

BUG:189992

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=978810